fixed color contrast issues in the table, further fix

--- a/main.css
+++ b/main.css
@@ -248,6 +248,6 @@ table .tg-green{
 }
 
 table .tg-red{
-  color:red;
+  color:#a70000;
   vertical-align:top;
 }
